--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/Aurelie715/AurelieBernard_3_03122021/issues"
   },
-  "homepage": "https://github.com/Aurelie715/AurelieBernard_3_03122021#readme",
-  "dependencies": {
-    "normalize-scss": "^7.0.1"
-  }
+  "homepage": "https://github.com/Aurelie715/AurelieBernard_3_03122021#readme"
 }
